--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "daisyui": "^5.1.26",
     "mongodb": "^6.20.0",
     "next": "15.5.4",
+    "next-auth": "^4.24.11",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
     "react-redux": "^9.2.0"
   },
