--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.9.0",
+    "bcrypt": "^6.0.0",
     "daisyui": "^5.1.26",
     "mongodb": "^6.20.0",
     "next": "15.5.4",
